[gd_scene load_steps=4 format=3 uid="uid://cses2ossl5e6r"]

[ext_resource type="Script" path="res://Scenes/Players/player.gd" id="1_i1yqs"]
[ext_resource type="Texture2D" uid="uid://bx8524qv5jvsq" path="res://Assets/Sprites/ship_I.png" id="1_r62oi"]
[ext_resource type="PackedScene" uid="uid://blki0jk7dt4ae" path="res://Scenes/Players/overloader.tscn" id="3_yngpi"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 61
script = ExtResource("1_i1yqs")
playerSpeed = 500
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_r62oi")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(9.53674e-07, -2.563e-06)
rotation = 1.5708
scale = Vector2(3.2, 4.8)
polygon = PackedVector2Array(9, 6.5, 0, -9, -9, 6.5, -2.98023e-07, 9.375)
metadata/_edit_lock_ = true

[node name="LaserPoint" type="Marker2D" parent="."]
position = Vector2(45, 0)
metadata/_edit_lock_ = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Overloader" parent="." instance=ExtResource("3_yngpi")]
metadata/_edit_lock_ = true

[node name="OverloadLength" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="overloadLaser" from="Overloader" to="." method="_on_overloader_overload_laser"]
[connection signal="timeout" from="OverloadLength" to="." method="_on_overload_length_timeout"]
